# freewili-updater

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  README.md  build.rs  com.freewili.updater.desktop  com.freewili.updater.metainfo.xml  com.freewili.updater.yml  flatpak.md  main.spec  pyproject.toml
.github/workflows/: build.yml  ci.yml
assets/: logo.xcf  main.css
assets/firmware/: FreeWiliDefcon2024Badge.uf2.lz4  FreeWiliDisplay.uf2.lz4  FreeWiliMain.uf2.lz4
icons/: icon.icns
src/: flasher.rs  main.py  main.rs  uimain.py  updater.py
src/ui/: main.py  main.qrc  main.ui  main_rc.py  main_ui.py
src/ui/res/: fw-logo.xcf
