[project]
name = "freewili-updater"
version = "0.1.0"
description = "Free-Wili firmware updater"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "atomics>=1.0.3",
    "freewili==0.0.25.post8.dev0",
    "pyside6>=6.9.0",
    "result>=0.17.0",
]


[dependency-groups]
dev = [
    "mypy == 1.15.0",
    "ruff == 0.11.0",
    "pre-commit == 4.1.0",
    "pytest>=8.3.5",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.ruff]
line-length = 120
exclude = ["src/ui/**"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",  # isort
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]

ignore = [
    "C901", # too complex
    "D401", # imperative mood
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"
