[project]
name = "freewili-updater"
version = "0.1.0"
description = "Free-Wili firmware updater"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "freewili==0.0.30",
    "pyside6>=6.9.0",
    "result>=0.17.0",
]


[dependency-groups]
dev = [
    "mypy == 1.17.0",
    "ruff == 0.12.3",
    "pre-commit == 4.2.0",
    "pytest>=8.3.5",
    "pyinstaller>=6.13.0",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = false
exclude = ["src/ui/main.py",]

[tool.ruff]
line-length = 120
exclude = ["src/ui/**"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",  # isort
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]

ignore = [
    "C901", # too complex
    "D401", # imperative mood
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"
