[project]
name = "freewili-updater"
dynamic = ["version"]
description = "Free-Wili firmware updater"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "freewili>=0.0.42",
    "pyside6>=6.9.1",
    "result>=0.17.0",
]


[dependency-groups]
dev = [
    "mypy == 1.17.0",
    "ruff == 0.12.3",
    "pre-commit == 4.2.0",
    "pytest>=8.3.5",
    "pyinstaller>=6.15.0",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = false
exclude = ["src/ui/main.py",]

[tool.uv.sources]
#result = { git = "https://github.com/montasaurus/result" }
#freewili = { path = "../freewili-python" }


[tool.ruff]
line-length = 120
exclude = ["src/ui/**"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",  # isort
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]

ignore = [
    "C901", # too complex
    "D401", # imperative mood
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/_version.py"
template = '''
version = "{version}"
'''

[tool.uv-dynamic-versioning]
metadata = false # I couldn't get pypi to upload with this enabled.
strict = true
style = "pep440"
dirty = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://pypi.org/legacy"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy"

[project.scripts]
fwi-updater = "main:main"
